--- a/vagrant/restaurant/webapp/templates/restaurants.html
+++ b/vagrant/restaurant/webapp/templates/restaurants.html
@@ -9,33 +9,15 @@
 </head>
 <body>
 
-<h1>Restaurants You Might Like</h1>
+<h1>Restaurants You Might Like {% if city or country %} in {% endif %}{% if city %} {{city}}, {% endif %}{% if country %} {{country}} {% endif %}</h1>
 
-<div id="restaurant-list-wrapper" style="display: none;" data-bind="visible: restaurantList().length > 0">
+<div id="restaurant-list-wrapper">
     <ul id="restaurant-list" data-bind="foreach: restaurantList">
-        <li class="restaurant">
-            <div class="restaurant-info">
-                <span data-bind="text: 'Restaurant #' + $data.store().id() + ': '"></span>
-
-                <a href="#" data-bind="text: $data.store().name, visible: !isEditable()"></a>
-                <input class="restaurant-input" type="text"
-                       data-bind="visible: isEditable(), textInput: $data.tempName"/>
-            </div>
-
-            <div class="restaurant-action-bar">
-                <a href="#" class="restaurant-update-button btn btn-success btn-sm"
-                   data-bind="text: 'Update', visible: isEditable(), click: $root.updateHandler"></a>
-                <a href="#" class="restaurant-edit-button btn btn-primary btn-sm"
-                   data-bind="text: isEditable() ? 'Cancel' : 'Edit', click: $root.editHandler"></a>
-                <a href="#" class="restaurant-delete-button btn btn-danger btn-sm"
-                   data-bind="text: 'Delete', click: $root.deleteHandler"></a>
-            </div>
-        </li>
+        {% for restaurant in restaurants %}
+            {% include 'resources/restaurant_single.html' %}
+        {% endfor %}
     </ul>
-    <div id="vertical-toolbar">
-        <a href="#" id="restaurant-new-button" class="glyphicon glyphicon-plus round green"
-           data-bind="click: showModal.bind(showModal, true) "></a>
-    </div>
+    {% include 'vertical_toolbar.html' %}
 
 </div>
 
